--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="https://i.ibb.co/VLp1c8g/pav-santa.png" type="image/x-icon">
 <link rel="canonical" href="https://santahoki88login.pages.dev">
-<<meta name="google-site-verification" content="jBEeMp1PWtLYU7Ds037K7kPxW63Hu2Fr-ofM8UhxiNk" />
+<meta name="google-site-verification" content="jBEeMp1PWtLYU7Ds037K7kPxW63Hu2Fr-ofM8UhxiNk" />
 <title>SANTAHOKI88 : LOGIN TERCEPAT SANTAHOKI88</title>
 <meta name="title" content="SANTAHOKI88 Menyediakan link login untuk mempermudah anda untuk login ke situs SANTAHOKI88">
 <meta name="description" content="SANTAHOKI88 MEMBERIKAN BANYAK HADIAH SETIAP HARINYA BURUAN DAFTAR DI SINI.">
